Security hardening: fix critical and high vulnerabilities
CRITICAL fixes:
- application.properties: move all credentials to env vars with fallbacks
  (DB_URL, DB_USERNAME, DB_PASSWORD, JWT_SECRET, MAIL_USERNAME, MAIL_PASSWORD)
- JwtTokenProvider: remove insecure double Base64 encoding; decode secret directly
- SecurityConfig: restrict CORS from wildcard '*' to configured allowed-origin only;
  restrict allowedHeaders to specific headers instead of '*'
- SecurityConfig: add security headers (X-Frame-Options DENY, HSTS, X-Content-Type)

HIGH fixes:
- RateLimitFilter: new rate limiter on /api/auth/login — blocks IP after 10
  attempts in 60 seconds, returns 429 with Retry-After header
- GlobalExceptionHandler: generic handler no longer leaks exception message to
  client; full error logged server-side only
- FeeController: validate payment amount is positive and within sane limit

MEDIUM fixes:
- application.properties: JWT expiration reduced from 24h to 1h (3600000ms)
- application.properties: spring.jpa.show-sql=false (don't log SQL in production)

OTHER:
- .gitignore: add .env, application-prod.properties, secrets.properties

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>